--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <li>Leite - <b>R$ 5,90</b></li>
         <li>Refrigerante - <b>R$ 8,00</b></li>
         <li>Manteiga - <b>R$ 7,99</b></li>
-        <li>Pão Suiço - <b>R$ 2,00</b></li>
+        <li>Pão Frânces - <b>R$ 2,00</b></li>
     </ul>
 
     <p>Valor total - <strong>R$ 32,89</strong> </p>
