mudança do refrigerante para o suco

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <ul>
         <li>Café - <b>R$ 9,00</b></li>
         <li>Leite - <b>R$ 5,90</b></li>
-        <li>Refrigerante - <b>R$ 8,00</b></li>
+        <li>Suco- <b>R$ 8,00</b></li>
         <li>Requeijão - <b>R$ 7,99</b></li>
         <li>Pão Frânces - <b>R$ 2,00</b></li>
     </ul>
